modify product ui

--- a/initializereactproject/src/App.css
+++ b/initializereactproject/src/App.css
@@ -7,3 +7,18 @@
     background: #f1f1f1;
 }
 
+.inner-effect{
+    display: none;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    max-width: 400px;
+    background: #ffffff83;
+    border-radius: 10px;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
+}
+
+.watch-card:hover .inner-effect{
+    display: block;
+    height: 100%;
+}
